# jsin

./: .gitignore  .golangci.yml  Dockerfile  README.md  config.tmp.yml  docker-compose.yml  go.mod  go.sum
.bucketeer/: coderefs.yaml
.github/workflows/: ci.yml  docker-image-ci.yml  pr-go.yml  r2-upload-build.yml
bot/cron_handler/: handler.go
bot/handler/: bot.go
bot/message_handler/: bot.go  dto.go
bot/telegram/: send_image.go  telegram.bot.go  telegram_bot.go
cmd/: main.go
cmd/job/: migrate_object.go
cmd/server/: main.go
cmd/server/error/: error.type.go
config/: config.go
database/: database.go
logger/: BUILD.bazel  logger.go  zap.go
migrations/: 20240720160000init_db.sql
model/: base.go  cron_job.go  image.go
pkg/common/: common.go
pkg/common/error/: error.type.go  error_response.go
pkg/constants/: constant.go
pkg/storage/: cronjob_storage.go  image_storage.go
server/: health.go  server.go
server/middleware/: api_key.go
