load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "logger.go",
        "zap.go",
    ],
    importpath = "go.tekoapis.com/tekbone/app/common/golang/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
